--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:JetBrains Mono 12
+font pango:Fira Code Mono 12
 # for_window [all] title_window_icon on
 
 # for_window [class="^.*"] border normal 1
@@ -68,7 +68,7 @@ bindsym $mod+Shift+q kill
 #bindsym $mod+d exec --no-startup-id     dmenu_run -nb '#272727' -sf '#1e1e1e' -sb '#A3AD48' -nf '#C5D71D'
 
 
-bindsym $mod+r exec --no-startup-id rofi -show drun -show-icons -font "Hack 18"
+# bindsym $mod+r exec --no-startup-id rofi -show drun -show-icons -font "Fira Code 18"
 #bindsym $mod+Tab exec --no-startup-id rofi -show window -show-icons  -font "Hack 18"
 #bindsym $mod+Shift+Tab exec --no-startup-id rofi -show windowcd -show-icons  -font "Hack 18"
 #bindsym mod1+comma exec --no-startup-id /home/root99/.config/rofi/launchers/ribbon/launcher.sh
@@ -186,9 +186,9 @@ assign [class="Pcmanfm"] $ws3
 assign [class="mpv"] $ws5
 for_window [class="xdman-Main"] floating enable
 # reload the configuration file
-bindsym $mod+Shift+e reload
+bindsym $mod+Shift+r reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+shift+r restart
+# bindsym $mod+shift+r restart
 # exit i3 (logs you out of your X session)
 #bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 #directly exit i3
@@ -250,7 +250,7 @@ mode "resize" {
 #exec --no-startup-id xinput set-prop 16 366 1
 #exec --no-startup-id xinput set-prop 14 364 1
 #start num touchpad
-exec  setxkbmap -option keypad:pointerkeys
+exec --no-startup-id setxkbmap -option keypad:pointerkeys
 #swap caps and esc
 #exec setxkbmap -option caps:swapescape
 #restaring the system
@@ -286,7 +286,7 @@ status_command i3blocks
 position top
 # output primary
 #tray_output primary
-font pango:JetBrains Mono 12
+font pango:Fira Code Mono 12
 colors{
     background #00000000
     #statusline #00000000
