--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -31,7 +31,7 @@ rounded-corners-exclude = [
 ];
 round-borders = 5;
 round-borders-exclude = [
-  #"class_g = 'TelegramDesktop'",
+  "class_g = 'TelegramDesktop'",
   "class_g='Brave-browser-nightly'",
 ];
 
@@ -204,7 +204,8 @@ opacity-rule = [
   #"70:class_g     = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
-  "70:class_g     = 'TelegramDesktop'",
+  "100:class_g     = 'TelegramDesktop'",
+  "90:class_g     = 'Code'",
   "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
   "100:class_g    = 'Thunderbird'"
@@ -270,7 +271,7 @@ blur: {
   # requires: https://github.com/ibhagwan/picom
   method = "dual_kawase";
   # method = "kernel";
-  strength = 5;
+  strength = 3;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
   #background = false;
