--- a/kitty/kitty_dracula.conf
+++ b/kitty/kitty_dracula.conf
@@ -8,7 +8,7 @@ env:
   # available, otherwise `xterm-256color` is used.
   TERM: xterm-256color
 
-font_family      Fira Code Light
+font_family      Fira Code
 #font_family      SpaceMono Mono
 bold_font        Fira Code
 italic_font      Fira Code
