--- a/i3/config
+++ b/i3/config
@@ -178,7 +178,7 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-assign [class="Brave-browser-nightly"] $ws2
+assign [class="firefox"] $ws2
 assign [class="Brave"] $ws2
 assign [class="Code"] $ws4
 assign [class="Org.gnome.Nautilus"] $ws3
