PERF: perfect ranger config

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -494,8 +494,9 @@ map pd console paste dest=
 map p`<any> paste dest=%any_path
 map p'<any> paste dest=%any_path
 
-map dD console delete
-map dT console trash
+# map dD console delete
+map dD shell trash-put -- %s
+map dT shell -p trash-put -- %s
 
 map dd cut
 map ud uncut
