--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -160,7 +160,7 @@ inactive-opacity = 1.0;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.7;
+# frame-opacity = 0.7;
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -206,6 +206,7 @@ opacity-rule = [
   "100:class_g    = 'Meld'",
   "100:class_g     = 'TelegramDesktop'",
   "90:class_g     = 'Code'",
+  "100:class_g     = 'Rofi'",
   "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
   "100:class_g    = 'Thunderbird'"
