--- a/i3/config
+++ b/i3/config
@@ -182,7 +182,7 @@ assign [class="firefox"] $ws2
 assign [class="Brave"] $ws2
 assign [class="Code"] $ws4
 assign [class="Org.gnome.Nautilus"] $ws3
-#assign [title="ranger] $ws3
+# assign [title="ranger"] $ws3
 assign [class="Pcmanfm"] $ws3
 assign [class="mpv"] $ws5
 for_window [class="xdman-Main"] floating enable
