--- a/i3/config
+++ b/i3/config
@@ -14,16 +14,17 @@ set $mod Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:Fira Code Mono 12
-# for_window [all] title_window_icon on
+for_window [all] title_window_icon on
 
 # for_window [class="^.*"] border normal 1
 default_border pixel 2
+# hidhing borders in single screen
 hide_edge_borders smart
-#gaps outer 5
-#gaps inner 10
+# gaps outer 5
+gaps inner 10
 smart_gaps on
 # class                 border  backgr. text    indicator child_border
-client.focused          #0A0405 #211C6D #ffffff #F42E42   #EC0E1C
+client.focused          #0A0405 #211C6D #ffffff #F42E42   #bd3612
 client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
 client.unfocused        #333333 #222222 #888888 #292d2e   #222222
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
@@ -141,14 +142,14 @@ bindsym $mod+space focus mode_toggle
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1: "
-set $ws2 "2: www"
+set $ws2 "2: 뮻"
 set $ws3 "3: "
 set $ws4 "4: "
 set $ws5 "5: "
 set $ws6 "6: "
 set $ws7 "7: 🖳"
-set $ws8 "8"
-set $ws9 "9"
+set $ws8 "8: "
+set $ws9 "9 : 뮻"
 set $ws10 "10"
 
 # switch to workspace
