tried color changes

--- a/kitty/kitty_me.conf
+++ b/kitty/kitty_me.conf
@@ -126,91 +126,49 @@ tab_separator " ┇"
 
 tab_title_template {title}
 
-background_opacity 0.85
+background_opacity 0.75
 
 dynamic_background_opacity no
 
 dim_opacity 1
-
-#color theme gruvbox
-# gruvbox-dark colorscheme for kitty
-# snazzy theme used as base
-
-foreground           #ebdbb2
-background            #000000
-#background           #272727
-selection_foreground #655b53
-selection_background #ebdbb2
+# --------------------------------------------------------------------------------------------------
+cursor                #708183
+selection_background  #91B2BA
+selection_foreground #CF7C7C
 url_color            #d65c0d
-
-foreground            #f8f8f2
+# --------------------------------------------------------------------------------------------------
+foreground            #eff0eb
 background            #282a36
-selection_foreground  #ffffff
-selection_background  #44475a
+# base 16-------------------------------------------------------------------------------------------
+foreground   #d0afc1
+background   #090607
+cursor       #d0afc1
 
-url_color #8be9fd
-
-# black
-color0  #21222c
-color8  #6272a4
-
-# red
-color1  #ff5555
-color9  #ff6e6e
-
-# green
-color2  #50fa7b
-color10 #69ff94
-
-# yellow
-color3  #f1fa8c
-color11 #ffffa5
-
-# blue
-color4  #bd93f9
-color12 #d6acff
-
-# magenta
-color5  #ff79c6
-color13 #ff92df
-
-# cyan
-color6  #8be9fd
-color14 #a4ffff
-
-# white
-color7  #f8f8f2
-color15 #ffffff
-
-# Cursor colors
-cursor            #f8f8f2
-cursor_text_color background
-
-# Tab bar colors
-active_tab_foreground   #282a36
-active_tab_background   #f8f8f2
-inactive_tab_foreground #282a36
-inactive_tab_background #6272a4
-
-# Marks
-mark1_foreground #282a36
-mark1_background #ff5555
-# Cursor
+color0       #090607
+color8       #917a87
+color1       #6B4A5C
+color9       #6B4A5C
+color2       #942C32
+color10      #942C32
+color3       #C02E34
+color11      #C02E34
+color4       #9F565E
+color12      #9F565E
+color5       #DA5761
+color13      #DA5761
+color6       #826584
+color14      #826584
+color7       #d0afc1
+color15      #d0afc1
+# Cursor--------------------------------------------------------------------------------------------
 cursor #c0caf5
 cursor_text_color #1a1b26
-
-# Selection highlight
-selection_foreground none
-selection_background #28344a
-
-# The color for highlighting URLs on mouse-over
-url_color #9ece6a
-
+# ---------------------------------------------------------------------------------------------------
 # Window borders
 active_border_color #3d59a1
 inactive_border_color #101014
 bell_border_color #e0af68
-
+# ---------------------------------------------------------------------------------------------------
 # Tab bar
 tab_bar_style fade
 tab_fade 1
