--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -170,7 +170,7 @@ inactive-opacity-override = false;
 active-opacity = 1.0;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-inactive-dim = 0.3;
+# inactive-dim = 0.3;
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
@@ -272,7 +272,7 @@ blur: {
   # requires: https://github.com/ibhagwan/picom
   method = "dual_kawase";
   # method = "kernel";
-  strength = 5;
+  strength = 3;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
   #background = false;
