--- a/i3/config
+++ b/i3/config
@@ -24,7 +24,7 @@ hide_edge_borders smart
 gaps inner 10
 smart_gaps on
 # class                 border  backgr. text    indicator child_border
-client.focused          #0A0405 #211C6D #ffffff #F42E42   #bd3612
+client.focused          #0A0405 #211C6D #ffffff #F42E42   #b58900
 client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
 client.unfocused        #333333 #222222 #888888 #292d2e   #222222
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
@@ -112,7 +112,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-#bindsym $mod+h split toggle
+bindsym mod1+h split toggle
 
 # split in vertical orientation
 #bindsym $mod+v split v
@@ -192,7 +192,7 @@ for_window [title="ranger" class="kitty"] floating enable;resize set 900 700;mov
 # reload the configuration file
 bindsym $mod+Shift+r reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-# bindsym $mod+shift+r restart
+bindsym mod1+shift+r restart
 # exit i3 (logs you out of your X session)
 #bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 #directly exit i3
@@ -205,10 +205,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
+        bindsym l resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym j resize shrink height 10 px or 10 ppt
+        bindsym h resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -269,7 +269,7 @@ exec --no-startup-id setxkbmap -option keypad:pointerkeys
 #bindsym $mod+Ctrl+n exec pcmanfm
 #bindsym $mod+shift+n exec sudo nautilus
 #resize mode
-#bindsym $mod+r mode "resize"
+bindsym mod1+r mode "resize"
 #outer gaps increase
 bindsym $mod+Ctrl+z gaps outer current plus 5
 bindsym $mod+Shift+z gaps outer current minus 5
@@ -280,9 +280,9 @@ bindsym $mod+Shift+a gaps inner current minus 5
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-height 35
-i3bar_command ~/Downloads/i3-4.20_features/build/i3bar -t
-# i3bar_command i3bar -t
+height 30
+# i3bar_command ~/Downloads/i3-4.20_features/build/i3bar -t NOTE:needed for custom build
+i3bar_command i3bar -t
 #status_command i3status
 #status_command /usr/local/bin/net-speed-and-brightness.sh
 #status_command i3blocks -c $HOME/.config/i3/i3blocks.conf
@@ -292,13 +292,14 @@ position top
 #tray_output primary
 font pango:Fira Code Mono 12
 colors{
-    background #00000000
+    background #002b3600
     #statusline #00000000
     #separator  #00000000
-    focused_workspace #00000000 #00000000 #E5321A
+    focused_workspace #002b3600 #002b3600 #bd8900
+    # only apart when using multiple moniters
     active_workspace #00000000 #00000000 #E5321A
     inactive_workspace #00000000 #00000000 #D9A098
-    urgent_workspace #eb709b #eb709b #ffffff
+    urgent_workspace #cb4b16 #cb4b16 #ffffff
 }
 separator_symbol 🔸
 }
