--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -2,37 +2,30 @@
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton
-transition-length = 300
-transition-pow-x = 0.5
-transition-pow-y = 0.5
-transition-pow-w = 0.1
-transition-pow-h = 0.1
-size-transition = true
-corner-radius = 0.0;
+corner-radius = 25.0;
 rounded-corners-exclude = [
-  #"window_type = 'normal'",
+  # "window_type = 'normal'",
   "class_g = 'awesome'",
   "class_g = 'URxvt'",
   "class_g = 'XTerm'",
-  #"class_g = 'kitty'",
-  #"class_g = 'Alacritty'",
-  "class_g = 'i3bar'",
+  # "class_g = 'kitty'",
+  "class_g = 'Alacritty'",
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
   "class_g = 'firefox'",
-  "class_g='Brave-browser-nightly'",
   "class_g = 'Thunderbird'",
-  "class_g='dwm'",
-  "class_g='dmenu'",
-  "class_g = 'Dunst'",
+  "class_g = 'Rofi'",
+  "class_g = 'Pcmanfm'",
   "name = 'Notification'",
   "class_g     = 'Signal'",
-
+  "class_g     = 'Polkit-gnome-authentication-agent-1'",
+  "class_g     = 'i3-frame'",
+  "class_g     = 'Brave-browser'",
+  # "class_g = 'Dunst'",
 ];
-round-borders = 5;
+round-borders = 1;
 round-borders-exclude = [
-  "class_g = 'TelegramDesktop'",
-  "class_g='Brave-browser-nightly'",
+  #"class_g = 'TelegramDesktop'",
 ];
 
 # Specify a list of border width rules, in the format `PIXELS:PATTERN`,
@@ -40,13 +33,14 @@ round-borders-exclude = [
 # border_width set by the window manager.
 #
 # example:
-#    round-borders-rule = [ "2:class_g = 'URxvt'" ];
 #
 round-borders-rule = [
   "3:class_g      = 'XTerm'",
   "3:class_g      = 'URxvt'",
-  "5:class_g     = 'Alacritty'",
-  #"15:class_g     = 'Signal'"
+  "10:class_g     = 'Alacritty'",
+  "2:class_g     = 'kitty'",
+  "2:class_g     = 'Dunst'",
+  "15:class_g     = 'Signal'"
 ];
 
 #################################
@@ -122,9 +116,9 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-#fading = false
+# fading = false
 fading = true;
-fading-delta = 5;
+
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
 fade-in-step = 0.03;
@@ -156,11 +150,11 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 1.0;
+inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-# frame-opacity = 0.7;
+frame-opacity = 0.7;
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -170,17 +164,16 @@ inactive-opacity-override = false;
 active-opacity = 1.0;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.3;
+inactive-dim = 0.3
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
 focus-exclude = [
   "class_g = 'Cairo-clock'",
   "class_g = 'Bar'",                    # lemonbar
-  "class_g = 'slop'", # maim
-    "class_g='dwm'",
-    "class_g='dmenu'"
-
+  "class_g = 'slop'",                    # maim
+  "class_g = 'Polybar'",                 # polybar
+  "class_g = 'Rofi'"                    # rofi
 ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
@@ -195,38 +188,20 @@ focus-exclude = [
 #
 # opacity-rule = []
 opacity-rule = [
-  "100:class_g     = 'i3bar'",             # lemonbar
+  "80:class_g     = 'Bar'",             # lemonbar
   "100:class_g    = 'slop'",            # maim
   "100:class_g    = 'XTerm'",
   "100:class_g    = 'URxvt'",
   "100:class_g    = 'kitty'",
   "100:class_g    = 'Alacritty'",
-  #"70:class_g     = 'Polybar'",
+  "80:class_g     = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
-  "100:class_g     = 'TelegramDesktop'",
-  "90:class_g     = 'Code'",
-  "100:class_g     = 'Rofi'",
+  "70:class_g     = 'TelegramDesktop'",
   "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
   "100:class_g    = 'Thunderbird'"
 ];
-
-
-#################################
-#           Corners             #
-#################################
-
-# Sets the radius of rounded window corners. When > 0, the compositor will
-# round the corners of windows. Does not interact well with
-# `transparent-clipping`.
-#corner-radius = 0
-
-## Exclude conditions for rounded corners.
-#rounded-corners-exclude = [
-  #"window_type = 'dock'",
-  #"window_type = 'desktop'"
-#];
 
 
 #################################
@@ -270,35 +245,28 @@ blur-kern = "3x3box";
 
 blur: {
   # requires: https://github.com/ibhagwan/picom
-  method = "dual_kawase";
-  # method = "kernel";
-  strength = 3;
+  method = "kawase";
+  #method = "kernel";
+  strength = 7;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
-  #background = false;
-  #background-frame = false;
-  #background-fixed = false;
-  #kern = "3x3box";
+  background = false;
+  background-frame = false;
+  background-fixed = false;
+  kern = "3x3box";
 }
 
 # Exclude conditions for background blur.
 blur-background-exclude = [
-    #"window_type = 'dock'",
-    #"window_type = 'desktop'",
-    "class_g = 'code-oss'",
-    "class_g = 'Org.gnome.Nautilus'",
-    "class_g='Pcmanfm'",
-    "class_g='dwm'",
-
-    # prevents picom from blurring the background
-    #"class_g='Alacritty'",
-    #"class_g='kitty'",
-    "class_g='Polybar'",
-    # when taking selection screenshot with `main`
-    # https://github.com/naelstrof/maim/issues/130
-    "class_g = 'slop'",
-    "_GTK_FRAME_EXTENTS@:c"
-    #"!I3_FLOATING_WINDOW@:c"
+  #"window_type = 'dock'",
+  #"window_type = 'desktop'",
+  #"class_g = 'URxvt'",
+  #
+  # prevents picom from blurring the background
+  # when taking selection screenshot with `main`
+  # https://github.com/naelstrof/maim/issues/130
+  "class_g = 'slop'",
+  "_GTK_FRAME_EXTENTS@:c"
 ];
 
 #################################
@@ -330,8 +298,8 @@ vsync = true;
 mark-wmwin-focused = true;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
- mark-ovredir-focused = false
-#mark-ovredir-focused = true;
+# mark-ovredir-focused = false
+mark-ovredir-focused = true;
 
 # Try to detect windows with rounded corners and don't consider them
 # shaped windows. The accuracy is not very high, unfortunately.
@@ -348,7 +316,7 @@ detect-client-opacity = true;
 # Specify refresh rate of the screen. If not specified or 0, picom will
 # try detecting this with X RandR extension.
 #
- #refresh-rate = 60
+# refresh-rate = 60
 refresh-rate = 0;
 
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
@@ -419,7 +387,7 @@ detect-client-leader = true;
 # has actually changed. Potentially degrades the performance, but might fix some artifacts.
 # The opposing option is use-damage
 #
- #no-use-damage = false
+# no-use-damage = false
 use-damage = true;
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw
@@ -511,12 +479,10 @@ log-level = "info";
 #
 wintypes:
 {
-  normal = { fade = true; shadow = false; }
-  floating = {blur-background:true}
+  normal = { fade = false; shadow = false; }
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 0.8; }
   dropdown_menu = { opacity = 0.8; }
 };
-
