--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,13 +1,13 @@
 #################################
 #             Corners           #
 #################################
-# requires: https://github.com/sdhand/compton
-transition-length = 300
-transition-pow-x = 0.5
-transition-pow-y = 0.5
-transition-pow-w = 0.1
-transition-pow-h = 0.1
-size-transition = true
+# # requires: https://github.com/sdhand/compton
+# transition-length = 300
+# transition-pow-x = 0.5
+# transition-pow-y = 0.5
+# transition-pow-w = 0.1
+# transition-pow-h = 0.1
+# size-transition = true
 corner-radius = 0.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
@@ -272,7 +272,7 @@ blur: {
   # requires: https://github.com/ibhagwan/picom
   method = "dual_kawase";
   # method = "kernel";
-  strength = 5;
+  strength = 7;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
   #background = false;
@@ -511,9 +511,9 @@ log-level = "info";
 #
 wintypes:
 {
-  normal = { fade = true; shadow = false; }
+  normal = { fade = false; shadow = false; }
   floating = {blur-background:true}
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  tooltip = { fade = false; shadow = false; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 0.8; }
