--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -2,12 +2,12 @@
 #             Corners           #
 #################################
 # # requires: https://github.com/sdhand/compton
-# transition-length = 300
-# transition-pow-x = 0.5
-# transition-pow-y = 0.5
-# transition-pow-w = 0.1
-# transition-pow-h = 0.1
-# size-transition = true
+transition-length = 500
+transition-pow-x = 0.5
+transition-pow-y = 0.5
+transition-pow-w = 0.5
+transition-pow-h = 0.5
+size-transition = true
 corner-radius = 0.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
