--- a/i3/config
+++ b/i3/config
@@ -279,35 +279,35 @@ bindsym $mod+Shift+a gaps inner current minus 5
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-height 30
-# i3bar_command ~/Downloads/i3-4.20_features/build/i3bar -t NOTE:needed for custom build
-i3bar_command i3bar -t
-#status_command i3status
-#status_command /usr/local/bin/net-speed-and-brightness.sh
-#status_command i3blocks -c $HOME/.config/i3/i3blocks.conf
-status_command i3blocks
-position top
-# output primary
-#tray_output primary
-font pango:Fira Code Mono 12
-colors{
-    background #002b3600
-    # statusline #00000000
-    #separator  #00000000
-    focused_workspace #002b3600 #002b3600 #bd8900
-    # only apart when using multiple moniters
-    active_workspace #00000000 #00000000 #E5321A
-    inactive_workspace #00000000 #00000000 #D9A098
-    urgent_workspace #cb4b16 #cb4b16 #ffffff
-}
-separator_symbol 🔸
-}
+# bar {
+# height 30
+# # i3bar_command ~/Downloads/i3-4.20_features/build/i3bar -t NOTE:needed for custom build
+# i3bar_command i3bar -t
+# #status_command i3status
+# #status_command /usr/local/bin/net-speed-and-brightness.sh
+# #status_command i3blocks -c $HOME/.config/i3/i3blocks.conf
+# status_command i3blocks
+# position top
+# # output primary
+# #tray_output primary
+# font pango:Fira Code Mono 12
+# colors{
+#     background #002b3600
+#     # statusline #00000000
+#     #separator  #00000000
+#     focused_workspace #002b3600 #002b3600 #bd8900
+#     # only apart when using multiple moniters
+#     active_workspace #00000000 #00000000 #E5321A
+#     inactive_workspace #00000000 #00000000 #D9A098
+#     urgent_workspace #cb4b16 #cb4b16 #ffffff
+# }
+# separator_symbol 🔸
+# }
 #
 #
 #starting polybar
-#exec_always --no-startup-id sh polybar bottom --config=$HOME/.config/polybar.old/config_i3 & polybar right --config=$HOME/.config/polybar.old/config_i3
-#exec_always --no-startup-id sh $HOME/.config/polybar.old/launch.sh
+# exec_always --no-startup-id polybar bottom --config=$HOME/.config/polybar.old/config_i3
+exec_always --no-startup-id sh $HOME/.config/polybar.old/launch_i3.sh
 #polybar modes
 #exec_always --no-startup-id polybar bottom --config=$HOME/.config/polybar.old/config_i3 & polybar right --config=$HOME/.config/polybar.old/config_i3
 set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
