Tokyo Night color palette added

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -30,13 +30,14 @@
 ##################
 
 # Start in fullscreen mode by default.
-#fs=yes
+fs=no
+save-position-on-quit=yes
 
 # force starting with centered window
 #geometry=50%:50%
 
 # don't allow a new window to have a size larger than 90% of the screen size
-#autofit-larger=90%x90%
+# autofit-larger=90%x90%
 
 # Do not close the window on exit.
 #keep-open=yes
@@ -44,13 +45,13 @@
 # Do not wait with showing the video window until it has loaded. (This will
 # resize the window once video is loaded. Also always shows a window with
 # audio.)
-#force-window=immediate
+# force-window=immediate
 
 # Disable the On Screen Controller (OSC).
 #osc=no
 
 # Keep the player window on top of all other windows.
-#ontop=yes
+# ontop=yes
 
 # Specify high quality video rendering preset (for --vo=gpu only)
 # Can cause performance problems with some drivers and GPUs.
@@ -110,9 +111,9 @@
 # impact performance unless used for slow input such as network.)
 #cache-dir=~/.cache/
 #cache-on-disk=yes
-keepaspect-window=no
+# keepaspect-window=no
 # Display English subtitles if available.
-slang=en
+# slang=en
 
 # Play Finnish audio if available, fall back to English otherwise.
 #alang=fi,en
