--- a/btop/btop.conf
+++ b/btop/btop.conf
@@ -1,8 +1,8 @@
-#? Config file for btop v. 1.2.0
+#? Config file for btop v. 1.2.1
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
-color_theme = "/usr/share/btop/themes/solarized_dark.theme"
+color_theme = "TTY"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
 theme_background = False
@@ -22,7 +22,7 @@ presets = "cpu:1:default,proc:0:default cpu:0:default,mem:0:default,net:0:defaul
 
 #* Set to True to enable "h,j,k,l" keys for directional control in lists.
 #* Conflicting keys for h:"help" and k:"kill" is accessible while holding shift.
-vim_keys = False
+vim_keys = True
 
 #* Rounded corners on boxes, is ignored if TTY mode is ON.
 rounded_corners = True
@@ -47,14 +47,14 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc", separate values with whitespace.
-shown_boxes = "cpu mem net proc"
+shown_boxes = "cpu mem proc net"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 2000
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu responsive",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu responsive" updates top process directly.
-proc_sorting = "cpu direct"
+proc_sorting = "memory"
 
 #* Reverse sorting order, True or False.
 proc_reversed = False
@@ -163,7 +163,7 @@ use_fstab = True
 show_io_stat = True
 
 #* Toggles io mode for disks, showing big graphs for disk read/write speeds.
-io_mode = False
+io_mode = True
 
 #* Set to True to show combined read/write io graphs in io mode.
 io_graph_combined = False
