--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -38,7 +38,7 @@ window:
   #  y: 0
 
   # Spread additional padding evenly around the terminal content.
-  dynamic_padding: true
+  # dynamic_padding: true
 
   # Window decorations
   #
@@ -66,7 +66,7 @@ window:
   title: Alacritty@Garuda
 
   # Opacity
-  opacity: 0.6
+  opacity: 1
 
   # Window class (Linux/BSD only):
   class:
