--- a/kitty/kitty_onedark.conf
+++ b/kitty/kitty_onedark.conf
@@ -1,13 +1,3 @@
-# vim:fileencoding=utf-8:ft=conf:foldmethod=marker
-env:
-  # TERM variable
-  #
-  # This value is used to set the `$TERM` environment variable for
-  # each instance of Alacritty. If it is not present, alacritty will
-  # check the local terminfo database and use `alacritty` if it is
-  # available, otherwise `xterm-256color` is used.
-  TERM: xterm-256color
-
 font_family      Fira Code
 #font_family      SpaceMono Mono
 bold_font        Fira Code
@@ -16,7 +6,7 @@ bold_italic_font Fira Code
 
 font_size 14
 
-adjust_line_height  1
+adjust_line_height  5
 adjust_column_width 0
 
 disable_ligatures never
@@ -85,15 +75,15 @@ enabled_layouts *
 window_resize_step_cells 2
 window_resize_step_lines 2
 
-window_border_width 1.0
+window_border_width 0
 
 draw_minimal_borders yes
 
 window_margin_width 0.0
 
-single_window_margin_width -1000.0
+# single_window_margin_width -1000.0
 
-window_padding_width 2.0
+window_padding_width 0
 
 placement_strategy center
 
@@ -126,7 +116,7 @@ tab_separator " ┇"
 
 tab_title_template {title}
 
-background_opacity 0.85
+background_opacity 1
 
 dynamic_background_opacity no
 
@@ -147,25 +137,7 @@ url_color            #d65c0d
 # This work is licensed under the terms of the GPL-2.0 license.
 # For a copy, see https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html.
 
-foreground #979eab
-background #282c34
-cursor #cccccc
-color0 #282c34
-color1 #e06c75
-color2 #98c379
-color3 #e5c07b
-color4 #61afef
-color5 #be5046
-color6 #56b6c2
-color7 #979eab
-color8 #393e48
-color9 #d19a66
-color10 #56b6c2
-color11 #e5c07b
-color12 #61afef
-color13 #be5046
-color14 #56b6c2
-color15 #abb2bf
+include ./OneDark.conf
 selection_foreground #282c34
 selection_background #979eab
 # Cursor
