Final Tokyo Night v3

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -2,13 +2,13 @@
 #             Corners           #
 #################################
 # # requires: https://github.com/sdhand/compton
-transition-length = 500
-transition-pow-x = 0.5
-transition-pow-y = 0.5
-transition-pow-w = 0.5
-transition-pow-h = 0.5
-size-transition = true
-corner-radius = 0.0;
+# transition-length = 500
+# transition-pow-x = 0.5
+# transition-pow-y = 0.5
+# transition-pow-w = 0.5
+# transition-pow-h = 0.5
+# size-transition = true
+# corner-radius = 0.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'awesome'",
@@ -512,7 +512,7 @@ log-level = "info";
 wintypes:
 {
   normal = { fade = false; shadow = false; }
-  floating = {blur-background:true}
+  # floating = {blur-background:true}
   tooltip = { fade = false; shadow = false; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
