--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -164,7 +164,8 @@ shell /usr/bin/zsh
 
 editor .
 close_on_child_death no
-allow_remote_control no
+allow_remote_control socket-only
+listen_on unix:/tmp/kitty
 update_check_interval 0
 startup_session none
 clipboard_control write-clipboard write-primary
